Add more examples